sem3_60/C++/complite/Assignment_3/.metadata/.plugins/org.eclipse.cdt.ui/A3_Q03.build.log
12:22:48 **** Incremental Build of configuration Debug for project A3_Q03 ****
make all 
Building file: ../q33.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"q33.d" -MT"q33.o" -o "q33.o" "../q33.cpp"
../q33.cpp:126:11: error: expected ‘;’ at end of member declaration
  126 |  employee()::datee(int d,int m,int y)
      |           ^
      |            ;
../q33.cpp:126:20: error: expected unqualified-id before ‘int’
  126 |  employee()::datee(int d,int m,int y)
      |                    ^~~
../q33.cpp:126:20: error: expected ‘)’ before ‘int’
  126 |  employee()::datee(int d,int m,int y)
      |                   ~^~~
      |                    )
../q33.cpp: In member function ‘void employee::display_emp()’:
../q33.cpp:153:29: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
  153 |   printf("\n \t Phone No : %d ",phone_no);
      |                            ~^   ~~~~~~~~
      |                             |   |
      |                             int long long int
      |                            %lld
../q33.cpp: In function ‘int main()’:
../q33.cpp:176:10: warning: format ‘%d’ expects argument of type ‘int*’, but argument 2 has type ‘long long int*’ [-Wformat=]
  176 |  scanf("%d",&phone_no);
      |         ~^  ~~~~~~~~~
      |          |  |
      |          |  long long int*
      |          int*
      |         %lld
../q33.cpp:178:8: error: expected primary-expression before ‘(’ token
  178 |  person(char *name,char *gender,char *email,long long phone_no);
      |        ^
../q33.cpp:178:9: error: expected primary-expression before ‘char’
  178 |  person(char *name,char *gender,char *email,long long phone_no);
      |         ^~~~
../q33.cpp:178:20: error: expected primary-expression before ‘char’
  178 |  person(char *name,char *gender,char *email,long long phone_no);
      |                    ^~~~
../q33.cpp:178:33: error: expected primary-expression before ‘char’
  178 |  person(char *name,char *gender,char *email,long long phone_no);
      |                                 ^~~~
../q33.cpp:178:45: error: expected primary-expression before ‘long’
  178 |  person(char *name,char *gender,char *email,long long phone_no);
      |                                             ^~~~
../q33.cpp:207:11: warning: unused variable ‘eid’ [-Wunused-variable]
  207 |  int size,eid,flag=0;
      |           ^~~
../q33.cpp:207:15: warning: unused variable ‘flag’ [-Wunused-variable]
  207 |  int size,eid,flag=0;
      |               ^~~~
make: *** [subdir.mk:20: q33.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

12:22:49 Build Failed. 9 errors, 4 warnings. (took 313ms)

